--- a/tests/visual/src/misc/stepper-vertical.html
+++ b/tests/visual/src/misc/stepper-vertical.html
@@ -28,7 +28,7 @@
         <span>Label</span>
 
         <section>
-            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                 <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                     <li class="k-step k-step-first k-step-done" style="max-height: 33.333%">
                         <a href="#" class="k-step-link">
@@ -44,15 +44,15 @@
                             </span>
                         </a>
                     </li>
-                    <li class="k-step k-step-last">
-                        <a href="#" class="k-step-link" style="max-height: 33.333%">
+                    <li class="k-step k-step-last" style="max-height: 33.333%">
+                        <a href="#" class="k-step-link">
                             <span class="k-step-indicator">
                                 <span class="k-step-indicator-text">3</span>
                             </span>
                         </a>
                     </li>
                 </ol>
-                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                     <span class="k-progress-status-wrap k-progress-end"></span>
                     <div class="k-state-selected" style="width: 100%; height: 50%;">
                         <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -61,7 +61,7 @@
             </nav>
         </section>
         <section>
-            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                 <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                     <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                         <a href="#" class="k-step-link">
@@ -85,8 +85,8 @@
                             </span>
                         </a>
                     </li>
-                    <li class="k-step k-step-last k-step-optional">
-                        <a href="#" class="k-step-link" style="max-height: 33.333%">
+                    <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                        <a href="#" class="k-step-link" >
                             <span class="k-step-indicator">
                                 <span class="k-step-indicator-text">3</span>
                             </span>
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                 </ol>
-                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                     <span class="k-progress-status-wrap k-progress-end"></span>
                     <div class="k-state-selected" style="width: 100%; height: 50%;">
                         <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -106,7 +106,7 @@
             </nav>
         </section>
         <section>
-            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                 <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                     <li class="k-step k-step-first k-step-done" style="max-height: 33.333%">
                         <a href="#" class="k-step-link">
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                 </ol>
-                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                     <span class="k-progress-status-wrap k-progress-end"></span>
                     <div class="k-state-selected" style="width: 100%; height: 50%;">
                         <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -139,7 +139,7 @@
             </nav>
         </section>
         <section>
-            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                 <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                     <li class="k-step k-step-first k-step-done" style="max-height: 33.333%">
                         <a href="#" class="k-step-link">
@@ -163,7 +163,7 @@
                         </a>
                     </li>
                 </ol>
-                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                     <span class="k-progress-status-wrap k-progress-end"></span>
                     <div class="k-state-selected" style="width: 100%; height: 50%;">
                         <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -177,7 +177,7 @@
         <span class="col-4">Content Between Steps</span>
 
         <section class="col-4">
-            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+            <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                 <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                     <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                         <a href="#" class="k-step-link">
@@ -220,7 +220,7 @@
                         </a>
                     </li>
                 </ol>
-                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 12;">
+                <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                     <span class="k-progress-status-wrap k-progress-end"></span>
                     <div class="k-state-selected" style="width: 100%; height: 20%;">
                         <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
