--- a/tests/visual/src/misc/wizard-vertical.html
+++ b/tests/visual/src/misc/wizard-vertical.html
@@ -32,7 +32,7 @@
             <div class="wrapper">
                 <p>Vertical wizard; Content is placed to the right (Default)</p>
                 <div id="wizard" class="k-widget k-wizard k-wizard-vertical k-wizard-right">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -68,7 +68,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -98,7 +98,7 @@
             <div class="wrapper">
                 <p>Small height set</p>
                 <div id="wizard" style="height: 350px;"class="k-widget k-wizard k-wizard-vertical k-wizard-right">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -134,7 +134,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -166,7 +166,7 @@
             <div class="wrapper">
                 <p>Short content</p>
                 <div id="wizard" class="k-widget k-wizard k-wizard-vertical k-wizard-right">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -190,8 +190,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -202,7 +202,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -232,7 +232,7 @@
             <div class="wrapper">
                 <p>Short content; Big height set</p>
                 <div id="wizard" style="height: 300px;"class="k-widget k-wizard k-wizard-vertical k-wizard-right">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -256,8 +256,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -268,7 +268,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -300,7 +300,7 @@
             <div class="wrapper">
                 <p>Vertical wizard; Content is placed to the left</p>
                 <div id="wizard" class="k-widget k-wizard k-wizard-vertical k-wizard-left">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -324,8 +324,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -336,7 +336,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -366,7 +366,7 @@
             <div class="wrapper">
                 <p>Small height set</p>
                 <div id="wizard" style="height: 350px;"class="k-widget k-wizard k-wizard-vertical k-wizard-left">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -390,8 +390,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -402,7 +402,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -432,7 +432,7 @@
             <div class="wrapper">
                 <p>Short content</p>
                 <div id="wizard" class="k-widget k-wizard k-wizard-vertical k-wizard-left">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -456,8 +456,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -468,7 +468,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
@@ -498,7 +498,7 @@
             <div class="wrapper">
                 <p>Short content; Big height set</p>
                 <div id="wizard" style="height: 300px;" class="k-widget k-wizard k-wizard-vertical k-wizard-left">
-                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
+                    <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(3, 1fr)">
                         <ol class="k-step-list k-step-list-vertical" style="grid-row-start: 1; grid-row-end: -1;">
                             <li class="k-step k-step-first k-step-done k-step-success" style="max-height: 33.333%">
                                 <a href="#" class="k-step-link">
@@ -522,8 +522,8 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="k-step k-step-last k-step-optional">
-                                <a href="#" class="k-step-link" style="max-height: 33.333%">
+                            <li class="k-step k-step-last k-step-optional" style="max-height: 33.333%">
+                                <a href="#" class="k-step-link" >
                                     <span class="k-step-indicator">
                                         <span class="k-step-indicator-text">3</span>
                                     </span>
@@ -534,7 +534,7 @@
                                 </a>
                             </li>
                         </ol>
-                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 2; grid-row-end: 10;">
+                        <div class="k-widget k-progressbar k-progressbar-vertical k-progressbar-reverse" style="grid-row-start: 1; grid-row-end: 3; top: 17px;">
                             <span class="k-progress-status-wrap k-progress-end"></span>
                             <div class="k-state-selected" style="width: 100%; height: 50%;">
                                 <span class="k-progress-status-wrap k-progress-end" style="width: 100%; height: 200%;"></span>
